tests/invalid/types_8.exp
types_8.p:15: Type error: 'func() -> int' and 'func() -> string' are not the same
